# ohsome-quality-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.continuous-integration  Jenkinsfile  README.md  approvaltests_config.json  babel.cfg  development.docker-compose.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yaml  docker-compose.yml  pipeline_config.groovy  postgis.sh  production.docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  test.py
workers/: .pre-commit-config.yaml  Dockerfile  Dockerfile.continuous-integration  pyproject.toml  run_uvicorn.py  setup.cfg
workers/config/: logging.yaml  sample.config.yaml
workers/ohsome_quality_analyst/: __init__.py  api.py  cli.py  cli_opts.py  config.py  definitions.py  oqt.py
workers/ohsome_quality_analyst/api/: api.py  request_models.py  response_models.py
workers/ohsome_quality_analyst/attributes/: attributes.yaml  definitions.py  models.py
workers/ohsome_quality_analyst/base/: indicator.py  layer.py  report.py  topic.py
workers/ohsome_quality_analyst/base/templates/: indicator_template.html  report_template.html
workers/ohsome_quality_analyst/cli/: cli.py  options.py
workers/ohsome_quality_analyst/geodatabase/: auth.py  client.py  create_results_table.sql  load_results.sql  region_names.sql  regions_as_geojson.sql  save_results.sql  select_shdi.sql
workers/ohsome_quality_analyst/html_templates/: indicator_template.html  template.py
workers/ohsome_quality_analyst/indicators/: base.py  models.py
workers/ohsome_quality_analyst/indicators/attribute_completeness/: indicator.py  indicator.py.orig  metadata.yaml
workers/ohsome_quality_analyst/indicators/building_area/: indicator.py  metadata.yaml  scaler.joblib
workers/ohsome_quality_analyst/indicators/building_completeness/: indicator.py  metadata.yaml  select_hex_cells.sql
workers/ohsome_quality_analyst/indicators/currentness/: indicator.py  metadata.yaml
workers/ohsome_quality_analyst/indicators/density/: indicator.py  metadata.yaml
workers/ohsome_quality_analyst/indicators/ghs_pop_comparison/: indicator.py  metadata.yaml
workers/ohsome_quality_analyst/indicators/ghs_pop_comparison_buildings/: indicator.py  metadata.yaml
workers/ohsome_quality_analyst/indicators/ghs_pop_comparison_roads/: indicator.py  metadata.yaml
workers/ohsome_quality_analyst/indicators/last_edit/: indicator.py  (+1 more)
workers/ohsome_quality_analyst/ohsome/: client.py  layer_definitions.yaml  layer_definitions_georgia.yaml  topics.yaml
workers/ohsome_quality_analyst/projects/: definitions.py  models.py  projects.yaml
workers/ohsome_quality_analyst/quality_dimensions/: definitions.py  models.py
workers/ohsome_quality_analyst/raster/: client.py
workers/ohsome_quality_analyst/reports/: base.py  models.py
workers/ohsome_quality_analyst/topics/: models.py  presets.yaml
workers/ohsome_quality_analyst/utils/: definitions.py  exceptions.py  helper.py  helper_asyncio.py  helper_geo.py  logging.yaml  models.py  validators.py
workers/scripts/: GaugeChartDraft.ipynb  mapping_saturation.py  run_mapping_saturation_models.py  start_api.py  update_swagger_scripts.sh
workers/scripts/locust/: feature-collection-germany-heidelberg.geojson  locust.sh  locustfile.py
workers/tests/: conftest.py  test_api.py  test_api_indicator.py  test_api_report.py  test_cli.py  test_helper.py  test_indicator_ghs_pop_comparison.py  test_indicator_last_edit.py  test_indicator_poi_density.py  test_load_layers.py  test_load_metadata.py  test_logging.py  test_name_to_class.py  test_report_remote_mapping_level_one.py  test_report_simple_report.py
workers/tests/fixtures/: europe.geojson  feature-collection-germany-heidelberg.geojson  feature-germany-heidelberg.geojson  heidelberg_altstadt.geojson
workers/tests/integrationtests/: api_response_schema.py  conftest.py  test_api.py  test_api_geojson_io.py  test_api_indicator.py  test_api_indicator_geojson_io.py  test_api_regions.py  test_api_report.py  test_api_report_geojson_io.py  test_base_indicator.py  test_base_report.py  test_cli.py  test_cli_file_io.py  test_cli_geojson_io.py  test_geo_interface.py  test_geodatabase.py  test_helper.py  test_indicator_attribute_completeness.py  test_indicator_building_area.py  test_indicator_building_completeness.py  test_indicator_currentness.py  test_indicator_density.py  test_indicator_geo_interface.py  test_indicator_ghs_pop_comparison.py  test_indicator_ghs_pop_comparison_buildings.py  test_indicator_ghs_pop_comparison_roads.py  test_indicator_last_edit.py  test_indicator_mapping_saturation.py  test_indicator_minimal.py  test_indicator_poi_density.py  test_indicator_ratio.py  test_indicator_tags_ratio.py  test_ohsome_client.py  test_oqt.py  test_oqt_geojson_io.py  test_postgres.py  test_raster.py  test_report_jrc_requirements.py  test_report_remote_mapping_level_one.py  test_report_simple_report.py  (+2 more)
workers/tests/unittests/: __init__.py  test_api.py  test_api_request_models.py  test_attribute_definitions.py  test_attributes.py  test_cli.py  test_cli_opts.py  test_config.py  test_datetime_to_isostring.py  test_definitions.py  test_get_default_figure.py  test_helper.py  test_helper_asyncio.py  test_indicator_building_area.py  test_indicator_mapping_saturation_models.py  test_layer.py  test_load_layers.py  test_load_metadata.py  test_load_topics.py  test_logging.py  test_multilevel_mapping_saturation.py  test_name_to_class.py  test_ohsome_client.py  test_project_definitions.py  test_quality_dimension_definitions.py  test_raster.py  test_remove_svg_from_properties.py  test_report_building_report.py  test_report_food_related_report.py  test_report_jrc_requirements.py  test_report_map_action_poc.py  test_report_minimal.py  test_report_multilevel_currentness.py  test_report_multilevel_mapping_saturation.py  test_report_remote_mapping_level_one.py  test_report_road_report.py  test_report_simple_report.py  test_report_sketchmap_fitness.py  test_report_test_report.py  test_topic.py  (+2 more)
(+1267 files in other folders)
