[tool.poetry]
name = "ohsome_quality_api"
version = "1.9.0"
description = "Data quality estimations for OpenStreetMap."
authors = ["ohsome team <ohsome@heigit.org>"]
homepage = "https://api.quality.ohsome.org"
repository = "https://github.com/GIScience/ohsome-quality-api"
keywords = [
  "osm",
  "gis",
  "geography",
  "metric",
  "ohsome",
  "quality",
  ]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "gistools-ohsome-machine-learning-models"
url = "https://gitlab.gistools.geog.uni-heidelberg.de/api/v4/groups/277/-/packages/pypi/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
geojson = "^3.2.0"
fastapi = "^0.115.8"
PyYAML = "^6.0"
toml = "^0.10.2"  # NOTE: Remove this dep in favor of build-in tomllib in Python 3.11
httpx = "^0.28.1"
asyncpg = "^0.30"
python-dateutil = "^2.8.2"
scipy = "^1.9.3"
rpy2 = "^3.5.15"
click = "^8.1.2"
uvicorn = "^0.34.0"
schema = "^0.7.5"
pyproj = "^3.6"
pydantic = "^2.10"
geojson-pydantic = "^1.2"
plotly = "^6.0.0"
psycopg = {extras = ["binary"], version = "^3.1"}
async-lru = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = {extras = ["pygments"], version = "^8.3.5"}
pytest-cov = "^6.0.0"
pytest-mock = "^3.11.1"
vcrpy = "^7.0.0"
approvaltests = "^14.3.0"
ruff = "^0.9.4"
kaleido = "0.2.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pygments = "^2.19.1"  # add syntax highlighting to pytest output

[tool.poetry.urls]
"Issues" = "https://github.com/GIScience/ohsome-quality-api/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-nameing
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
]

[tool.ruff.lint.per-file-ignores]
"ohsome_quality_api/indicators/mapping_saturation/models.py" = [
    "N803",
    "N806",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
