[project]
name = "ohsome-quality-api"
version = "1.11.2"
description = "Data quality estimations for OpenStreetMap."
authors = [{email="ohsome@heigit.org"}]
keywords = [
  "osm",
  "gis",
  "geography",
  "metric",
  "ohsome",
  "quality",
  ]
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "asyncpg>=0.30.0",
    "asyncpg-recorder>=2025.8.28",
    "fastapi>=0.115.12",
    "geojson>=3.2.0",
    "geojson-pydantic>=2.0.0",
    "httpx>=0.28.1",
    "kaleido==0.2.1",
    "ohsome-filter-to-sql",
    "plotly>=6.0.1",
    "pydantic>=2.11.4",
    "pyproj>=3.7.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "rpy2>=3.5.17",
    "schema>=0.7.7",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]
[project.urls]
Homepage = "https://api.quality.ohsome.org"
Repository = "https://github.com/GIScience/ohsome-quality-api"

[dependency-groups]
dev = [
    "asyncpg-recorder",
    "approvaltests>=14.5.0",
    "click>=8.2.0",
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "pygments>=2.19.1",  # add syntax highlighting to pytest
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff==0.11.9",  # fixed because of pre-commit
    "vcrpy>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.7.5"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]
asyncpg-recorder = { git = "https://github.com/GIScience/asyncpg-recorder.git" }
ohsome-filter-to-sql = { git = "https://github.com/GIScience/ohsome-filter-to-sql.git" }

[tool.ruff.lint]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-nameing
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
]

[tool.ruff.lint.per-file-ignores]
"ohsome_quality_api/indicators/mapping_saturation/models.py" = [
    "N803",
    "N806",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

