[project]
name = "ohsome-quality-api"
version = "1.14.0"
description = "Data quality estimations for OpenStreetMap."
authors = [{email="ohsome@heigit.org"}]
keywords = [
  "osm",
  "gis",
  "geography",
  "metric",
  "ohsome",
  "quality",
  ]
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "fastapi>=0.115.12",
    "fastapi-i18n>=0.5.1",
    "geojson>=3.2.0",
    "geojson-pydantic>=2.0.0",
    "httpx>=0.28.1",
    "ohsome-filter-to-sql>=0.1.0",
    "plotly>=6.0.1",
    "pydantic>=2.11.4",
    "pyproj>=3.7.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "rpy2>=3.5.17",
    "schema>=0.7.7",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]
[project.urls]
Homepage = "https://api.quality.ohsome.org"
Repository = "https://github.com/GIScience/ohsome-quality-api"

[dependency-groups]
dev = [
    "approvaltests>=14.5.0",
    "asyncpg-recorder>=0.1.0",
    "click>=8.2.0",
    "fastapi[standard]>=0.115.12",
    "kaleido>=1.2.0",
    "pre-commit>=4.2.0",
    "pygments>=2.19.1", # add syntax highlighting to pytest
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff==0.11.9", # fixed because of pre-commit
    "vcrpy>=7.0.0",
    "babel>=2.17.0",
]

[build-system]
requires = ["uv_build>=0.7.5"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-nameing
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
    "TRY",  # tryceratops
    "FURB", # refurb
    "PERF", # perflint
    "FAST", # FastAPI
    "INT",  # flake8-gettext
    "LOG",  # flake8-logging
    "S",    # bandit
    "B",    # bugbear
    "SIM",  # simplify
    # "RUF",  # ruff-specific rules
]
ignore = ["TRY003"]

[tool.ruff.lint.per-file-ignores]
"ohsome_quality_api/indicators/mapping_saturation/models.py" = ["N803", "N806"]
"tests/*" = ["S101", "S608"]  # S101 usage of asserts; S608 possible SQL injection
"ohsome_quality_api/api/response_models.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.asyncpg-recorder]
"cassettes-dir"="tests/asyncpg_recorder_cassettes"
