[tool.poetry]
name = "ohsome_quality_analyst"
version = "0.7.0"
description = "Intrinsic and extrinsic data quality metrics for OpenStreetMap data."
authors = ["ohsome team <ohsome@heigit.org>"]
homepage = "https://oqt.ohsome.org"
repository = "https://github.com/GIScience/ohsome-quality-analyst"
keywords = [
  "osm",
  "gis",
  "geography",
  "metric",
  "ohsome",
  "quality",
  ]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"  # https://github.com/GIScience/ohsome-quality-analyst/issues/240
geojson = "^2.5.0"
click = "^7.1.2"
fastapi = "^0.68.0"
uvicorn = "^0.12.2"
requests = "^2.25.0"
matplotlib = "^3.2.2"
pandas = "^1.1.5"
dacite = "^1.6.0"
PyYAML = "^5.4.1"
toml = "^0.10.2"
httpx = "^0.17.0"
asyncpg = "^0.25.0"
vcrpy = "^4.1.1"
python-dateutil = "^2.8.2"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
mypy = "0.930"
schema = "^0.7.3"
pytest = "^6.2.2"
isort = "5.10.1 "
pytest-cov = "^2.12.0"
pep8-naming = "^0.12.1"
flake8 = "4.0.1"
black = "21.12b0"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
oqt = "ohsome_quality_analyst.cli.cli:cli"

[tool.poetry.urls]
"Issues" = "https://github.com/GIScience/ohsome-quality-analyst/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
