[tool.poetry]
name = "ohsome_quality_analyst"
version = "0.14.2"
description = "Intrinsic and extrinsic data quality metrics for OpenStreetMap data."
authors = ["ohsome team <ohsome@heigit.org>"]
homepage = "https://oqt.ohsome.org"
repository = "https://github.com/GIScience/ohsome-quality-analyst"
keywords = [
  "osm",
  "gis",
  "geography",
  "metric",
  "ohsome",
  "quality",
  ]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "gistools-ohsome-machine-learning-models"
url = "https://gitlab.gistools.geog.uni-heidelberg.de/api/v4/groups/277/-/packages/pypi/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
geojson = "^2.5.0"
fastapi = "^0.92.0"
requests = "^2.31.0"
PyYAML = "^6.0"
toml = "^0.10.2"
httpx = "^0.23.0"
asyncpg = "^0.27.0"
vcrpy = "^4.1.1"
python-dateutil = "^2.8.2"
Jinja2 = "^3.1.2"
scipy = "^1.9.3"
rpy2 = "^3.4.5"
rasterstats = "^0.16.0"
click = "^8.1.2"
uvicorn = "^0.20.0"
schema = "^0.7.5"
building-completeness-model = {version = "^0.1.0rc4", source = "gistools-ohsome-machine-learning-models"}
kaleido = "0.2.1"
plotly = "^5.14.0"
pyproj = "~3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.2.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
oqt = "ohsome_quality_analyst.cli.cli:cli"

[tool.poetry.urls]
"Issues" = "https://github.com/GIScience/ohsome-quality-analyst/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
